playground/templates/static/styles.css
/* Adding Styles to Nav Bar in base.html */
.mr-auto { /* add margin to the left of the first div */
    margin-left: 20px;
}

.ml-auto { /* add margin to the right of the last div */
    margin-right: 20px;
}

.my-nav .btn { /* Increase the button inside nav bar*/
    font-size: 20px;
}


/* Adding Styles to crime_map_index.html */
#body-container {
    padding-top: 20px;
}

#map { /* Leaflet map setting*/
    height: 400px;
}

#charts-container {
    padding-top: 20px;
}
.chart {
    margin: 10px;
}

/* The Style is for the visual_option.html */
.chart-options-preview {
    padding: 20px;
    display: grid;
    grid-template-columns: 1fr 1fr 1fr;
    grid-template-rows: 0.6fr 1.4fr;
    gap: 0px 10px;
    grid-template-areas: 
        "forms-options-select chart-preview chart-preview"
        ". chart-preview chart-preview";
}

.chart-preview { grid-area: chart-preview; }
.forms-options-select { grid-area: forms-options-select; }

.chart-options-select {
    display: grid;
    grid-template-columns: 1fr; 
    grid-template-rows: 1fr 1fr 1fr; 
    gap: 10px 0;
    grid-template-areas: 
        "chart-type"
        "chart-data-one"
        "add-chart-button";
    grid-area: chart-options-select;
}


.chart-type { grid-area: chart-type; }
.chart-data-one { grid-area: chart-data-one; }
.add-chart-button { grid-area: add-chart-button; }

